MDEV-16026: Global system_versioning_asof must not be used if client sessions can have non-default time zone

* store `system_versioning_asof` as timestamp
* session var processed in session timezone; global var processed in global timezone